--- a/FinalProject/app/src/main/AndroidManifest.xml
+++ b/FinalProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".GyroData"></activity>
+        <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
