--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
 
