--- a/FinalProject/app/src/main/AndroidManifest.xml
+++ b/FinalProject/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GyroData"></activity>
+        <activity android:name=".SleepTimer"></activity>
+        <activity android:name=".ConnectionPage" />
+        <activity android:name=".GyroData" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".MainPage" />
         <activity android:name=".HomePage" />
