--- a/April17_1/mobile/src/main/AndroidManifest.xml
+++ b/April17_1/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wmapp">
+    package="com.example.loginpage">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -11,13 +11,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.loginpage.SleepTimer"></activity>
+        <activity android:name="com.example.loginpage.ConnectionPage" />
+        <activity android:name="com.example.loginpage.GyroData" />
+        <activity android:name="com.example.loginpage.RegistrationActivity" />
+        <activity android:name="com.example.loginpage.MainPage" />
+        <activity android:name="com.example.loginpage.HomePage" />
+        <activity android:name="com.example.loginpage.LineActivity" />
+        <activity android:name="com.example.loginpage.BarChartActivity" />
+        <activity android:name="com.example.loginpage.MobileConnection" />
+        <activity android:name="com.example.loginpage.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="com.example.loginpage.MessageService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data android:scheme="wear" android:host="*" android:pathPrefix="/my_path" />
+            </intent-filter>
+        </service>
+
+
+
     </application>
 
 </manifest>
