--- a/April17_1/wear/src/main/AndroidManifest.xml
+++ b/April17_1/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wmapp">
+    package="com.example.loginpage">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
         <service
-            android:name=".WearMessageService"
+            android:name="com.example.loginpage.WearMessageService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -34,7 +34,7 @@
             android:value="true" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.loginpage.WearConnection"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
