--- a/April17_1/wear/src/main/AndroidManifest.xml
+++ b/April17_1/wear/src/main/AndroidManifest.xml
@@ -12,13 +12,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
+        <activity android:name=".StartSleep"></activity>
+
         <service
-            android:name="com.example.loginpage.WearMessageService"
+            android:name=".WearMessageService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/my_path" />
+
+                <data
+                    android:host="*"
+                    android:pathPrefix="/my_path"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
 
@@ -34,7 +40,7 @@
             android:value="true" />
 
         <activity
-            android:name="com.example.loginpage.WearConnection"
+            android:name=".WearConnection"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
