Changes in Profile page

--- a/April17_1/mobile/src/main/AndroidManifest.xml
+++ b/April17_1/mobile/src/main/AndroidManifest.xml
@@ -11,34 +11,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.example.loginpage.SleepTimer"></activity>
-        <activity android:name="com.example.loginpage.ConnectionPage" />
-        <activity android:name="com.example.loginpage.GyroData" />
-        <activity android:name="com.example.loginpage.RegistrationActivity" />
-        <activity android:name="com.example.loginpage.MainPage" />
-        <activity android:name="com.example.loginpage.HomePage" />
-        <activity android:name="com.example.loginpage.LineActivity" />
-        <activity android:name="com.example.loginpage.BarChartActivity" />
-        <activity android:name="com.example.loginpage.MobileConnection" />
-        <activity android:name="com.example.loginpage.MainActivity">
+        <activity android:name=".AccountPage"></activity>
+        <activity android:name=".BottomNavigation" />
+        <activity android:name=".SleepTimer" />
+        <activity android:name=".ConnectionPage" />
+        <activity android:name=".GyroData" />
+        <activity android:name=".RegistrationActivity" />
+        <activity android:name=".MainPage" />
+        <activity android:name=".HomePage" />
+        <activity android:name=".LineActivity" />
+        <activity android:name=".BarChartActivity" />
+        <activity android:name=".MobileConnection" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
-            android:name="com.example.loginpage.MessageService"
+            android:name=".MessageService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
-                <data android:scheme="wear" android:host="*" android:pathPrefix="/my_path" />
+
+                <data
+                    android:host="*"
+                    android:pathPrefix="/my_path"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
-
-
-
     </application>
 
 </manifest>
