--- a/April17_1/mobile/build.gradle
+++ b/April17_1/mobile/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.jjoe64:graphview:4.2.2'
 }
 
 allprojects {
