--- a/April17_1/mobile/src/main/AndroidManifest.xml
+++ b/April17_1/mobile/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DatausagePage"></activity>
+        <activity android:name=".PlotGraph"></activity>
+        <activity android:name=".DatausagePage" />
         <activity android:name=".SettingsPage" />
         <activity android:name=".ProfilePage" />
         <activity android:name=".LogStatistics" />
